--- a/ChineseIdioms/ChineseIdioms/Properties/launchSettings.json
+++ b/ChineseIdioms/ChineseIdioms/Properties/launchSettings.json
@@ -1,8 +1,7 @@
 {
   "profiles": {
     "ChineseIdioms": {
-      "commandName": "Project",
-      "commandLineArgs": "join 风  功"
+      "commandName": "Project"
     }
   }
 }
